Fixed Heading levels and semantic HTML

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
   </head>
   <body>
     <main class="card">
-      <article class="card__image">
+      <section class="card__image">
         <div class="card__image--inner"></div>
-      </article>
-      <article class="card__text">
+      </section>
+      <section class="card__text">
         <h1 class="title">FAQ</h1>
         <div class="faqs">
           <div class="faq active">
             <div class="faq__question">
-              <h3>How many team members can I invite?</h3>
+              <h2>How many team members can I invite?</h2>
               <img src="/images/icon-arrow-down.svg" alt="Down Arrow" />
             </div>
             <div class="faq__answer">
@@ -55,7 +55,7 @@
           </div>
           <div class="faq">
             <div class="faq__question">
-              <h3>What is the maximum file upload size?</h3>
+              <h2>What is the maximum file upload size?</h2>
               <img src="/images/icon-arrow-down.svg" alt="Down Arrow" />
             </div>
             <div class="faq__answer">
@@ -67,7 +67,7 @@
           </div>
           <div class="faq">
             <div class="faq__question">
-              <h3>How do I reset my password?</h3>
+              <h2>How do I reset my password?</h2>
               <img src="/images/icon-arrow-down.svg" alt="Down Arrow" />
             </div>
             <div class="faq__answer">
@@ -79,7 +79,7 @@
           </div>
           <div class="faq">
             <div class="faq__question">
-              <h3>Can I cancel my subscription?</h3>
+              <h2>Can I cancel my subscription?</h2>
               <img src="/images/icon-arrow-down.svg" alt="Down Arrow" />
             </div>
             <div class="faq__answer">
@@ -91,7 +91,7 @@
           </div>
           <div class="faq">
             <div class="faq__question">
-              <h3>Do you provide additional support?</h3>
+              <h2>Do you provide additional support?</h2>
               <img src="/images/icon-arrow-down.svg" alt="Down Arrow" />
             </div>
             <div class="faq__answer">
@@ -102,15 +102,8 @@
             </div>
           </div>
         </div>
-      </article>
+      </section>
     </main>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Jaspal Singh</a>.
-    </div>
     <script src="/app.js"></script>
   </body>
 </html>
