Fixed Heading levels and semantic HTML

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   </head>
   <body>
     <main class="card">
-      <section class="card__image">
+      <div class="card__image">
         <div class="card__image--inner"></div>
-      </section>
-      <section class="card__text">
+      </div>
+      <div class="card__text">
         <h1 class="title">FAQ</h1>
         <div class="faqs">
           <div class="faq active">
@@ -102,7 +102,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </main>
     <script src="/app.js"></script>
   </body>
